tests/NormalTests/paczka1/small_fuzzy/15329287.err
Error in line 6: PekTvFG A631 39,3
Error in line 8: PekTvFG S295 61,0
Error in line 7: S16 S16 72,3
